@@ -1,5 +1,6 @@
 Version 3.1.0 To Be Released
 ============================
+BUG: Ticket#621 - TWizardNavigationButtonStyle could not be found (Qiang)
 
 Version 3.1.0 RC May 14, 2007
 =============================
